--- a/extra/dominode-extra/pyproject.toml
+++ b/extra/dominode-extra/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2-binary = "^2.8.5"
 sqlalchemy = "^1.3.18"
 ipython = "^7.16.1"
 pytest-raises = "^0.11"
+minio = "^5.0.10"
 
 [build-system]
 requires = ["poetry>=0.12"]
