--- a/extra/dominode-extra/pyproject.toml
+++ b/extra/dominode-extra/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Ricardo Garcia Silva <ricardo.garcia.silva@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+typer = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
