--- a/extra/dominode-extra/pyproject.toml
+++ b/extra/dominode-extra/pyproject.toml
@@ -22,4 +22,4 @@ requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry.scripts]
-minioadmin = 'dominode_extra.minioadmin:app'
+dominode-admin = 'dominode_extra.dominodeadmin:app'
