--- a/extra/dominode-bootstrapper/Dockerfile
+++ b/extra/dominode-bootstrapper/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.8-buster
 
-RUN curl \
-    --silent \
-    --show-error \
-    --location \
-    https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py > /opt/get-poetry.py
+RUN curl --silent --show-error --location \
+    https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py > /opt/get-poetry.py \
+  && curl --silent --show-error --location \
+    https://dl.min.io/client/mc/release/linux-amd64/archive/mc.RELEASE.2020-08-20T00-23-01Z > /usr/local/bin/mc \
+  && chmod +x /usr/local/bin/mc
 
 RUN adduser --gecos "" --disabled-password dominode
 
